--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,33 @@
         android:theme="@style/Theme.MiniProyecto"
         tools:targetApi="31">
         <activity
+            android:name=".IndexMusica"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterMusica"
+            android:exported="false" />
+        <activity
+            android:name=".IndexMuseo"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterMuseo"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterDeportes"
+            android:exported="false" />
+        <activity
+            android:name=".IndexTeatro"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterTeatro"
+            android:exported="false" />
+        <activity
+            android:name=".IndexCategorias"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterCategorias"
+            android:exported="false" />
+        <activity
             android:name=".LiberiIndex"
             android:exported="true">
             <intent-filter>
