--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.MiniProyecto"
         tools:targetApi="31">
         <activity
+            android:name=".AdapterCine"
+            android:exported="false" />
+        <activity
+            android:name=".IndexCine"
+            android:exported="false" />
+        <activity
             android:name=".IndexMusica"
             android:exported="false" />
         <activity
