--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.miniproyecto">
+    package="com.example.miniproyecto" >
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniProyecto"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".LogIn"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".categorias.cines.AdapterCine"
             android:exported="false" />
@@ -37,10 +46,9 @@
         <activity
             android:name=".categorias.teatros.IndexTeatro"
             android:exported="false" />
-
         <activity
             android:name=".LiberiIndex"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
